test/admin/language/english/localisation/country.php
<?php
// Heading
$_['heading_title']           = 'Country';

// Text
$_['text_success']            = 'Success: You have modified Countrys!';
$_['text_country'] 			  = 'Country';
$_['text_status']			  = 'Status';
$_['text_action']			  = 'Action';

// Entry
$_['entry_name']              = 'Country Name:';
$_['entry_status']            = 'Status:';

// error
$_['error_name']              = 'Country Name must be between 3 and 128 characters!';
$_['error_permission']        = 'Warning: You do not have permission to modify Countrys!';

// Column
$_['column_name']             = 'Country Name';
$_['column_action']           = 'Action';

// Error
$_['error_default']           = 'Warning: This Country cannot be deleted as it is currently assigned as the default store Country!';
$_['error_name']              = 'Country Name must be between 3 and 128 characters!';
?>